modificacion index y css

--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
    <header>
         <nav>
             <img src="./img/geurra fria 1.png" alt="">
+            <h2>HISTORIA</h2>
+            <h2><em><b>¿Qué fue la Guerra Fría?</b></em></h2>
             <ul>
             <a href="/pages/guerra.fria.html"><li>guerra fria</li></a> 
                 <a href="/pages/antagonismo.html"><li>antagonismo oscilatorio</li></a>
