--- a/index.html
+++ b/index.html
@@ -6,45 +6,37 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="./style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Borel&family=Poppins:wght@300&display=swap" rel="stylesheet">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous">
 </head>
 <body>
    <header>
         <nav>
-            <img src="./img/geurra fria 1.png" alt="">
-            <h2>HISTORIA</h2>
-            <h2><em><b>¿Qué fue la Guerra Fría?</b></em></h2>
-            <ul>
-            <a href="/pages/guerra.fria.html"><li>guerra fria</li></a> 
-                <a href="/pages/antagonismo.html"><li>antagonismo oscilatorio</li></a>
-                <a href="/pages/distension.html"><li>distension</li></a>
-                <a href="/pages/seg_fria.html"><li>la segunda guerra fria</li></a>
+            <img src="./img/logopestaña.png" alt="">
+            <!-- <h2>HISTORIA</h2> -->
+            <ul class="item_nav">
+            <a href="./pages/guerra_fria.html" class="href_nav"><li class="li_nav">Guerra Fria</li></a> 
+            <a href="./pages/seg_fria.html" class="href_nav" ><li class="li_nav">La Segunda Guerra Fria</li></a>
             </ul>
         </nav>
     </header>
     <main>
-        <section id="contenedor_principal">
-            <div class="contenedor_imagen"><img src="./img/guerra fria img.jpg" alt=""></div>
-            <div class="informacion">
-                <p class="contenedor_informacion">
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Corrupti itaque, blanditiis ab iste voluptatum iusto commodi vitae voluptas odit rem quod vel quis excepturi! Facere aut dolorum ratione quo odio?
-                    Sint doloribus modi porro commodi dolorem velit tempore qui natus! Ad culpa, nulla architecto quam ducimus error maiores unde magnam reiciendis. Recusandae perspiciatis soluta velit. Esse atque nulla libero dicta?
-                    Saepe sequi praesentium corporis odio. Ad consequuntur aut consectetur porro quisquam esse officiis quaerat quidem accusamus, voluptatem ipsa magni sed explicabo modi facere obcaecati temporibus, sint ea animi corrupti vitae?
-                </p>
+        <section id="foto_fondo">
+            <div id="principal">
+                <p class="titulo_principal">¿Qué fue la Guerra Fría?</p>
+                <p class="descripcion_principal">Los 45 años de enfrentamiento entre Occidente y la URSS terminaron con la disolución de la Unión Soviética. Algunos dicen que podría empezar otro similar a medida que aumentan las tensiones con Rusia.</p>
             </div>
         </section>
-         <section id="contenedor_principal" class="reverse">
-            <div class="contenedor_imagen"></div>
-            <div class="informacion">
-                <p class="contenedor_informacion">
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Corrupti itaque, blanditiis ab iste voluptatum iusto commodi vitae voluptas odit rem quod vel quis excepturi! Facere aut dolorum ratione quo odio?
-                    Sint doloribus modi porro commodi dolorem velit tempore qui natus! Ad culpa, nulla architecto quam ducimus error maiores unde magnam reiciendis. Recusandae perspiciatis soluta velit. Esse atque nulla libero dicta?
-                    Saepe sequi praesentium corporis odio. Ad consequuntur aut consectetur porro quisquam esse officiis quaerat quidem accusamus, voluptatem ipsa magni sed explicabo modi facere obcaecati temporibus, sint ea animi corrupti vitae?
-                </p>
-            </div>
+        <section id="parrafo_inicio">
+        <em>Cuando la Segunda Guerra Mundial llegaba a su fin en 1945, los líderes de las "tres grandes" potencias aliadas (Estados Unidos, la Unión Soviética y Gran Bretaña) se reunieron en Potsdam, Alemania, para acordar las condiciones que pondrían fin al conflicto más sangriento que el mundo haya visto jamás. Las grandes potencias dividieron Alemania en zonas de ocupación, reconocieron un gobierno respaldado por los soviéticos en Polonia y dividieron Vietnam, decisiones monumentales que dieron forma al orden mundial de la posguerra. Las conversaciones debían forjar una paz duradera, pero en 18 meses comenzó una Guerra Fría que duró más de cuatro décadas.
+
+          
+         Uno de los momentos más importantes de Potsdam no se recogió en un memorándum ni se proclamó en una rueda de prensa. Al final de la conferencia, el presidente estadounidense Harry Truman se llevó a un lado al primer ministro soviético Joseph Stalin para compartir con él algunas noticias explosivas: Estados Unidos acababa de probar con éxito un arma de "fuerza destructiva inusual". Se trataba de un arma nuclear capaz de destruir ciudades enteras, el armamento más peligroso y poderoso que el mundo había visto jamás.</em>
         </section>
     
     </main>
-
-
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm" crossorigin="anonymous"></script>
 </body>
 </html>
