modificacion linea del tiempo

--- a/pages/seg_fria.html
+++ b/pages/seg_fria.html
@@ -26,32 +26,63 @@
     </header>
     <main>
         <section>
-            <div id="foto_preguntas">
+            <div id="aa">
 
+            <img src="" alt="">
             </div>
         </section>
         <!-- //INICIA LINEA DE TIEMPO -->
         <div class="timeline">
-            <div class="event" onclick="openPopup('Evento 1', 'Descripción del Evento 1.')">Año 2020</div>
-            <div class="event" onclick="openPopup('Evento 2', 'Descripción del Evento 2.')">Año 2021</div>
-            <div class="event" onclick="openPopup('Evento 3', 'Descripción del Evento 3.')">Año 2022</div>
-            <div class="event" onclick="openPopup('Evento 1', 'Descripción del Evento 1.')">Año 2020</div>
-            <div class="event" onclick="openPopup('Evento 2', 'Descripción del Evento 2.')">Año 2021</div>
-            <div class="event" onclick="openPopup('Evento 3', 'Descripción del Evento 3.')">Año 2022</div>            
-          </div>
+           <em> <div class="event" onclick="openPopup('' , '<em> El termino Guerra fria existia desde la decada de 1930, cuando la guerre froide se utilizaba en francia para describir las relaciones cada vez mas tensas entre los paises europeos. En 1945, poco despues de que estados unidos lanzara la bomba atomica sobre hiroshima y nagasaki, el escritor britanico george orwell utilizo el termino en un ensayo que exploraba lo que la bomba atomica significaba para las relaciones internacionales<em/>')">Por que se le llama Guerra Fria</div> </em>
+           <em> <div class="event" onclick="openPopup('', '<em> Mientras los dos bandos se enfrentaban al otro lado del Telón de Acero, Estados Unidos y la URSS se enzarzaron en una carrera armamentística, invirtiendo billones de dólares en acumular arsenales nucleares.Estados Unidos tenía ventaja al principio de la carrera armamentística. Pero una vez que la URSS construyó su propio arsenal nuclear, las dos partes se enfrentaron por la destrucción mutua asegurada, es decir, la idea de que si una de las partes atacab la otra tomaría represalias, desatando consecuencias apocalípticas para ambas partes. </em>')">Como de cerca estuvo el mundo de la guerra nuclear</div> </em>
+           <em> <div class="event" onclick="openPopup('', '<em> Durante más de cuatro décadas de Guerra Fría, Estados Unidos y la Unión Soviética libraron múltiples guerras por delegación en todo el mundo. En la Guerra de Corea, la Guerra de Vietnam y otros conflictos armados, las superpotencias financiaron bandos opuestos o lucharon directamente contra milicias comunistas o capitalistas. Ambos bandos financiaron revoluciones, insurgencias y asesinatos políticos en América Latina, África, Asia y Oriente Medio.Estados Unidos y la Unión Soviética también compitieron para demostrar su dominio tecnológico en una carrera espacial que duró 20 años. La Unión Soviética fue la primera en lanzar en 1957 el Sputnik-1, el primer satélite artificial, mientras que Estados Unidos fue el primero en enviar un hombre a la luna en 1969. Sólo a mediados de la década de 1970 las dos naciones comenzaron a cooperar en misiones conjuntas.</em> ')">De que otra forma se librio la Guerra Fria</div> </em>
+        <em>  <div class="event" onclick="openPopup('', ' <em>A mediados de la década de 1980, la vida detrás del Telón de Acero había cambiado. En los países del bloque soviético se estaban produciendo levantamientos democráticos, y la propia URSS luchaba contra el caos económico y político. Estados Unidos y la URSS forjaron una relación más abierta, e incluso negociaron un tratado nuclear en 1987 que eliminó una clase de misiles lanzados desde tierra especialmente peligrosos de los arsenales de ambas naciones. En diciembre de 1991, la URSS se disolvió en naciones separadas.</em>')">Como termino la Guerra fria</div>            
+          </div> </em>
           
           <div class="popup" id="popup">
+           <div>
             <span class="close" onclick="closePopup()">&times;</span>
             <h2 id="popup-title"></h2>
             <p id="popup-content"></p>
+           </div>
+          </div>
+
+          <div class="imagenFondoPopup">
+            <img src="../img/guerra-fria-consecuencias-vietnam-e1608065793858.jpg" alt="">
           </div>
           <!-- //TERMINA LINEA DE TIEMPO -->
-
+          <div class="tarjetas">
+            <div class="card" style="width: 18rem;">
+                <img src="../img/john f kennedy.jpg" class="card-img-top" alt="...">
+                <div class="card-body">
+                  <h5 class="card-title">john F Kennedy</h5>
+                  <p class="card-text">John F. Kennedy fue elegido presidente de los Estados Unidos en 1960 y lanzó un programa llamado "Nueva Frontera" que incluía una iniciativa de rearme masivo, tanto de armas convencionales como nucleares. Kennedy también impulsó la economía, los derechos civiles, el bienestar social y una política exterior fortalecida.</p>
+                  <a href="#" class="btn btn-primary">Go somewhere</a>
+                </div>
+            </div>  
+            <div class="card" style="width: 18rem;">
+                <img src="../img/petrov.jpg" class="card-img-top" alt="...">
+                <div class="card-body">
+                  <h5 class="card-title">Stanislav Petrov</h5>
+                  <p class="card-text">fue un militar ruso que evitó un ataque de misiles entre la URSS y Estados Unidos. Petrov estaba a cargo del búnker Sérpujov-15, el centro de mando de la inteligencia militar soviética desde donde se coordinaba la defensa aeroespacial rusa2. Su misión era verificar y alertar de cualquier ataque a sus superiores, con lo que se iniciaría el proceso para contraatacar con armamento nuclear a los Estados Unidos. Petrov murió en 2017.
+                </p>
+                  <a href="#" class="btn btn-primary">Go somewhere</a>
+                </div>
+            </div>
+            <div class="card" style="width: 18rem;">
+                <img src="../img/nixon.jpg" class="card-img-top" alt="...">
+                <div class="card-body">
+                  <h5 class="card-title">Richard Nixon </h5>
+                  <p class="card-text">fue el 37 ° presidente de Estados Unidos123. Antes de su presidencia, fue vicepresidente bajo Dwight D. Eisenhower y también senador y representante del estado de California13. Durante su presidencia, Nixon lideró la normalización de las relaciones con China y firmó el Tratado de No Proliferación Nuclear. Su mandato estuvo marcado por la década de los 60’s, por las revoluciones sociales que ocurrieron en todo el mundo y por la intervención de Estados Unidos en la Guerra de Vietnam (1955-1975)</p>
+                  <a href="#" class="btn btn-primary">Go somewhere</a>
+                </div>
+            </div>
+        </div> 
     </main>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm"
-        crossorigin="anonymous"></script>
-        <script src="../script.js"></script>
+              <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js"
+              integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm"
+              crossorigin="anonymous"></script>
+              <script src="../script.js"></script>
 </body>
 
   
