--- a/pages/seg_fria.html
+++ b/pages/seg_fria.html
@@ -34,73 +34,52 @@
     <!-- //INICIA LINEA DE TIEMPO -->
 
     <div class="fechas">
-      <button id="fechaUno">San Pedro</button>
-      <button id="fechaDos">Rosario</button>
-      <button id="fechaTres">Capital Federal</button>
-      <button id="fechaCuatro">Capital Federal</button>
+      <button id="fechaUno">¿Por que se le llama Guerra Fria?</button>
+      <button id="fechaDos">¿Cómo de cerca estuvo el mundo de la guerra nuclear?</button>
+      <button id="fechaTres">¿De qué otra forma se librio la Guerra Fria?</button>
+      <button id="fechaCuatro">¿Cómo termino la Guerra fria?</button>
     </div>
 
     <div class="emergente__conteiner" id="emergente_conteiner">
       <div class="ventana__emergente">
-        <h2 class="titulo1" id="titulo1">Ventana Emergente 1</h2>
+        <h2 class="titulo1" id="titulo1">¿Por que se le llama Guerra Fria?</h2>
         <p class="texto1" id="texto1">
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. Officiis
-          omnis at facilis aperiam nisi sapiente, architecto impedit obcaecati
-          nam, modi officia autem doloremque? Tenetur aliquam ex vel adipisci.
-          Quas, asperiores.
+          El termino Guerra fria existia desde la decada de 1930, cuando la guerre froide se utilizaba en francia para
+          describir las relaciones cada vez mas tensas entre los paises europeos. En 1945, poco despues de que estados
+          unidos lanzara la bomba atomica sobre hiroshima y nagasaki, el escritor britanico george orwell utilizo el
+          termino en un ensayo que exploraba lo que la bomba atomica significaba para las relaciones internacionales
         </p>
-        <h2 class="titulo2" id="titulo2">Ventana Emergente 2</h2>
+        <h2 class="titulo2" id="titulo2">¿Cómo de cerca estuvo el mundo de la guerra nuclear?</h2>
         <p class="texto2" id="texto2">
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. Officiis
-          omnis at facilis aperiam nisi sapiente, architecto impedit obcaecati
-          nam, modi officia autem doloremque? Tenetur aliquam ex vel adipisci.
-          Quas, asperiores.
+          Mientras los dos bandos se enfrentaban al otro lado del Telón de Acero, Estados Unidos y la URSS se enzarzaron
+          en una carrera armamentística, invirtiendo billones de dólares en acumular arsenales nucleares.Estados Unidos
+          tenía ventaja al principio de la carrera armamentística. Pero una vez que la URSS construyó su propio arsenal
+          nuclear, las dos partes se enfrentaron por la destrucción mutua asegurada, es decir, la idea de que si una de
+          las partes atacab la otra tomaría represalias, desatando consecuencias apocalípticas para ambas partes.
         </p>
-        <h2 class="titulo3" id="titulo3">Ventana Emergente 3</h2>
+        <h2 class="titulo3" id="titulo3">¿De qué otra forma se librio la Guerra Fria?</h2>
         <p class="texto3" id="texto3">
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. Officiis
-          omnis at facilis aperiam nisi sapiente, architecto impedit obcaecati
-          nam, modi officia autem doloremque? Tenetur aliquam ex vel adipisci.
-          Quas, asperiores.
+          Durante más de cuatro décadas de Guerra Fría, Estados Unidos y la Unión Soviética libraron múltiples guerras
+          por delegación en todo el mundo. En la Guerra de Corea, la Guerra de Vietnam y otros conflictos armados, las
+          superpotencias financiaron bandos opuestos o lucharon directamente contra milicias comunistas o capitalistas.
+          Ambos bandos financiaron revoluciones, insurgencias y asesinatos políticos en América Latina, África, Asia y
+          Oriente Medio.Estados Unidos y la Unión Soviética también compitieron para demostrar su dominio tecnológico en
+          una carrera espacial que duró 20 años. La Unión Soviética fue la primera en lanzar en 1957 el Sputnik-1, el
+          primer satélite artificial, mientras que Estados Unidos fue el primero en enviar un hombre a la luna en 1969.
+          Sólo a mediados de la década de 1970 las dos naciones comenzaron a cooperar en misiones conjuntas.
         </p>
-        <h2 class="titulo4" id="titulo4">Ventana Emergente 4</h2>
+        <h2 class="titulo4" id="titulo4">¿Cómo termino la Guerra fria?</h2>
         <p class="texto4" id="texto4">
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. Officiis
-          omnis at facilis aperiam nisi sapiente, architecto impedit obcaecati
-          nam, modi officia autem doloremque? Tenetur aliquam ex vel adipisci.
-          Quas, asperiores.
+          A mediados de la década de 1980, la vida detrás del Telón de Acero había cambiado. En los países del bloque
+          soviético se estaban produciendo levantamientos democráticos, y la propia URSS luchaba contra el caos
+          económico y político. Estados Unidos y la URSS forjaron una relación más abierta, e incluso negociaron un
+          tratado nuclear en 1987 que eliminó una clase de misiles lanzados desde tierra especialmente peligrosos de los
+          arsenales de ambas naciones. En diciembre de 1991, la URSS se disolvió en naciones separadas.
         </p>
         <button id="cerrar">X</button>
       </div>
     </div>
 
-    <!-- <div class="timeline">
-      <em>
-        <div class="event"
-          onclick="openPopup('' , '<em> El termino Guerra fria existia desde la decada de 1930, cuando la guerre froide se utilizaba en francia para describir las relaciones cada vez mas tensas entre los paises europeos. En 1945, poco despues de que estados unidos lanzara la bomba atomica sobre hiroshima y nagasaki, el escritor britanico george orwell utilizo el termino en un ensayo que exploraba lo que la bomba atomica significaba para las relaciones internacionales<em/>')">
-          Por que se le llama Guerra Fria</div>
-      </em>
-      <em>
-        <div class="event"
-          onclick="openPopup('', '<em> Mientras los dos bandos se enfrentaban al otro lado del Telón de Acero, Estados Unidos y la URSS se enzarzaron en una carrera armamentística, invirtiendo billones de dólares en acumular arsenales nucleares.Estados Unidos tenía ventaja al principio de la carrera armamentística. Pero una vez que la URSS construyó su propio arsenal nuclear, las dos partes se enfrentaron por la destrucción mutua asegurada, es decir, la idea de que si una de las partes atacab la otra tomaría represalias, desatando consecuencias apocalípticas para ambas partes. </em>')">
-          Como de cerca estuvo el mundo de la guerra nuclear</div>
-      </em>
-      <em>
-        <div class="event"
-          onclick="openPopup('', '<em> Durante más de cuatro décadas de Guerra Fría, Estados Unidos y la Unión Soviética libraron múltiples guerras por delegación en todo el mundo. En la Guerra de Corea, la Guerra de Vietnam y otros conflictos armados, las superpotencias financiaron bandos opuestos o lucharon directamente contra milicias comunistas o capitalistas. Ambos bandos financiaron revoluciones, insurgencias y asesinatos políticos en América Latina, África, Asia y Oriente Medio.Estados Unidos y la Unión Soviética también compitieron para demostrar su dominio tecnológico en una carrera espacial que duró 20 años. La Unión Soviética fue la primera en lanzar en 1957 el Sputnik-1, el primer satélite artificial, mientras que Estados Unidos fue el primero en enviar un hombre a la luna en 1969. Sólo a mediados de la década de 1970 las dos naciones comenzaron a cooperar en misiones conjuntas.</em> ')">
-          De que otra forma se librio la Guerra Fria</div>
-      </em>
-      <em>
-        <div class="event"
-          onclick="openPopup('', ' <em>A mediados de la década de 1980, la vida detrás del Telón de Acero había cambiado. En los países del bloque soviético se estaban produciendo levantamientos democráticos, y la propia URSS luchaba contra el caos económico y político. Estados Unidos y la URSS forjaron una relación más abierta, e incluso negociaron un tratado nuclear en 1987 que eliminó una clase de misiles lanzados desde tierra especialmente peligrosos de los arsenales de ambas naciones. En diciembre de 1991, la URSS se disolvió en naciones separadas.</em>')">
-          Como termino la Guerra fria</div>
-    </div> </em>
-
-    <div class="popup" id="popup">
-      <span class="close" onclick="closePopup()">&times;</span>
-      <h2 id="popup-title"></h2>
-      <p id="popup-content"></p>
-    </div> -->
     <!-- //TERMINA LINEA DE TIEMPO -->
 
     <div class="tarjetas">
@@ -150,6 +129,17 @@
     crossorigin="anonymous"></script>
   <script src="../script.js"></script>
 </body>
-
+<hr>
+<footer>
+  <h5 class="footerTitulo">Seguinos en nuestras redes</h5>
+  
+  <i class="fab fa-facebook" style="color: #ffffff;"></i>
+  <h5> <a href="https://es-la.facebook.com"> Facebook </a> </h5>
+  <i class="fab fa-instagram" style="color: #ffffff;"></i>
+  <h5>  <a href="https://www.instagram.com/tomaasv._/"> Instagram </a> </h5>
+  <i class="fab fa-twitter" style="color: #ffffff;"></i>
+  <h5>  <a href="https://twitter.com/"> Twitter  </a> </h5>
+  
+</footer>
 
 </html>
