--- a/pages/guerra_fria.html
+++ b/pages/guerra_fria.html
@@ -104,4 +104,16 @@
     </main>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm" crossorigin="anonymous"></script>
 </body>
+<hr>
+<footer>
+  <h5 class="footerTitulo">Seguinos en nuestras redes</h5>
+  
+  <i class="fab fa-facebook" style="color: #ffffff;"></i>
+  <h5> <a href="https://es-la.facebook.com"> Facebook </a> </h5>
+  <i class="fab fa-instagram" style="color: #ffffff;"></i>
+  <h5>  <a href="https://www.instagram.com/tomaasv._/"> Instagram </a> </h5>
+  <i class="fab fa-twitter" style="color: #ffffff;"></i>
+  <h5>  <a href="https://twitter.com/"> Twitter  </a> </h5>
+  
+</footer>
 </html>
